--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ nav {
 	width: 100%;
 	height: 50px;
 	text-align: center;
+	margin: auto;
+	position: absolute fixed;
+	left: 0;
+	right: 0;
 }
 
 #navbar {
@@ -36,4 +40,19 @@ nav {
 
 #navbar:hover{
 	color: #818b81;
+}
+
+footer {
+	width: 100%;
+	height:100px;
+	background-color: #c5d5c5;
+	margin: 0 auto;
+	position: absolute;
+	left: 0;
+	right: 0;
+	line-height: 40px;
+	padding: 10px 10px 10px 50px;
+	font-family: helvetica;
+	font-size: 20px;
+	color: white;
 }
