--- a/style.css
+++ b/style.css
@@ -45,7 +45,8 @@ nav {
 footer {
 	width: 100%;
 	height:100px;
-	background-color: #c5d5c5;
+	background-color: #9fa9a3;
+	;
 	margin: 0 auto;
 	position: absolute;
 	left: 0;
@@ -55,4 +56,12 @@ footer {
 	font-family: helvetica;
 	font-size: 20px;
 	color: white;
+}
+
+#gitlink {
+	color: white;
+}
+
+#gitlink:hover {
+	color: #e3e0cc;
 }
