--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
 	background-color: #f0f0f0;
+	font-family: helvetica;
 }
 
 a {
@@ -8,10 +9,10 @@ a {
 
 #Chemistry {
 	padding-left: 30px;
-	font-family: helvetica;
 	letter-spacing: 10px;
 	color: #9fa9a3;
 	text-align: center;
+	text-shadow: 1px 1px 1px black;
 }
 
 nav {
@@ -22,46 +23,110 @@ nav {
 	width: 100%;
 	height: 50px;
 	text-align: center;
-	margin: auto;
-	position: absolute fixed;
-	left: 0;
-	right: 0;
+	margin: -15px;
+	justify-content: center;
+	align-items: center;
+	overflow: auto;
 }
 
-#navbar {
-	padding: 0px 10px 0px 10px;
+nav a {
 	color: white;
-	font-family: helvetica;
 	font-weight: bold;
 	font-size: 14px;
 	margin: auto;
 	line-height: 50px;
+	padding: 12px;
+	border-radius: 20px;
 }
 
-#navbar:hover{
-	color: #818b81;
+nav a.active {
+	background-color: #e3e0cc;
+	text-shadow: 1px 1px #9fa9a3;
+}
+
+nav a:hover{
+	background-color: #9fa9a3;
 }
 
 footer {
 	width: 100%;
 	height:100px;
-	background-color: #9fa9a3;
-	;
+	background-color: #c5d5c5;
 	margin: 0 auto;
 	position: absolute;
 	left: 0;
 	right: 0;
 	line-height: 40px;
 	padding: 10px 10px 10px 50px;
-	font-family: helvetica;
 	font-size: 20px;
 	color: white;
 }
 
 #gitlink {
 	color: white;
+	font-size: 50px;
+	font-weight: bold;
 }
 
 #gitlink:hover {
-	color: #dbebdb;
+	color: #eeede6;
+    text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;  
 }
+
+.column {
+	float: right;
+	width: 32%;
+	background-color: #e3e0cc;
+	border: 1px #e3e0cc;
+	border-radius: 12px;
+	margin: 6px;
+	margin-left: 10px;
+}
+
+.row:after {
+	content: "";
+	display: table;
+	clear: both;
+}
+
+.row {
+	align-items: center;
+}
+
+
+#bondtypes {
+	text-align: center;
+	color: #9fa9a3;
+	text-align: center;
+}
+
+.bond {
+	padding-left: 1em;
+}
+
+.definition {
+	padding-left: 3em;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
