--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ a {
 	letter-spacing: 10px;
 	color: #9fa9a3;
 	text-align: center;
-	text-shadow: 1px 1px 1px black;
 }
 
 nav {
@@ -48,34 +47,7 @@ nav a:hover{
 	background-color: #9fa9a3;
 }
 
-footer {
-	width: 100%;
-	height:100px;
-	background-color: #c5d5c5;
-	margin: 0 auto;
-	position: absolute;
-	left: 0;
-	right: 0;
-	line-height: 40px;
-	padding: 10px 10px 10px 50px;
-	font-size: 20px;
-	color: white;
-}
 
-#gitlink {
-	color: white;
-	font-size: 50px;
-	font-weight: bold;
-}
-
-#gitlink:hover {
-	color: #eeede6;
-    text-shadow:
-    -1px -1px 0 #000,
-    1px -1px 0 #000,
-    -1px 1px 0 #000,
-    1px 1px 0 #000;  
-}
 
 .column {
 	float: right;
@@ -113,8 +85,43 @@ footer {
 
 }
 
+h3 {
+	color:#c5d5c5;
+	text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000; 
+}
 
+footer {
+	width: 100%;
+	height:100px;
+	background-color: #c5d5c5;
+	margin: 0 auto;
+	position: absolute;
+	left: 0;
+	right: 0;
+	line-height: 40px;
+	padding: 10px 10px 10px 50px;
+	font-size: 20px;
+	color: white;
+}
 
+#gitlink {
+	color: white;
+	font-size: 50px;
+	font-weight: bold;
+}
+
+#gitlink:hover {
+	color: #eeede6;
+    text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000;  
+}
 
 
 
