--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	background-color: #f0f0f0;
+	background-color: white;
 	font-family: helvetica;
 }
 
@@ -7,15 +7,41 @@ a {
 	text-decoration: none;
 }
 
-#Chemistry {
-	padding-left: 30px;
+#logo {
+	width: 100px;
+	float: left;
+	padding-top: 50px;
+	padding-bottom: 20px;
+	padding-right: 5px;
+}
+
+#chemistry {
 	letter-spacing: 10px;
 	color: #9fa9a3;
-	text-align: center;
 	font-weight: bold;
+	float: left;
+	font-size: 40px;
+	padding-top: 45px;
+}
+
+#devname {
+	padding-top: 95px;
+	color: #c5d5c5;
+	letter-spacing: 1px;
+}
+
+#devlink {
+	padding-top: 95px;
+	color: #c5d5c5;
+	letter-spacing: 2px;
+}
+
+#devlink:hover {
+	color: #9fa9a3;
 }
 
 nav {
+	position: fixed;
 	float: right;
 	top:0;
 	right: 0;
@@ -23,7 +49,6 @@ nav {
 	width: 100%;
 	height: 50px;
 	text-align: center;
-	margin: -15px;
 	justify-content: center;
 	align-items: center;
 	overflow: auto;
@@ -122,7 +147,7 @@ footer {
 }
 
 #gitlink:hover {
-	color: #e3e0cc;
+	color: #9fa9a3;
     text-shadow:
     -1px -1px 0 #000,
     1px -1px 0 #000,
