--- a/style.css
+++ b/style.css
@@ -206,13 +206,13 @@ table {
 	table-layout: fixed;
 	border-radius: 10px;
 	font-size: 20px;
-	text-align: center;
-	align-items: center;
-	align-self: center;
-	align-content: center;
-	justify-content: center;
 }
 
+th {
+	text-align: center;
+	padding-left: 0px;
+	padding-right: 0px;
+}
 th:hover {
 	background-color: rgb(130, 130, 130);
 	color: white;
@@ -221,6 +221,7 @@ th:hover {
 td {
 	font-size: 15px;
 	padding: 20px 0px 20px 0px;
+	text-align: center;
 }
 
 .nonmetals {
@@ -275,7 +276,7 @@ td {
 button {
     display:inline-block;
     width: 100%;
-    padding: 30px 5px 30px 5px;
+    padding: 31px 5px 31px 5px;
     font-family: helvetica;
     font-size: 10px;
     font-weight: bold;
@@ -302,6 +303,12 @@ button {
 	color: white; 
 }
 
+#atomicmass {
+	font-size: 10px;
+	padding: 0px;
+	margin: 0px;
+	margin-bottom: -10px;
+}
 
 
 
