--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ nav {
 	overflow: auto;
 	padding-left: 15px;
 	padding-right: 15px;
+	z-index: 9999999;
 }
 
 nav a {
@@ -173,7 +174,7 @@ footer {
 	width: 100%;
 	height:100px;
 	background-color: #c5d5c5;
-	margin-top:200px;
+	margin-top:40em;
 	position: absolute;
 	left: 0;
 	right: 0;
@@ -263,14 +264,14 @@ td {
 }
 #lanthanide {
 	margin-top: 9px;
-	display: none;
 	position: absolute;
+	z-index: 999999;
 }
 
 #actinide {
 	margin-top: 80px;
-	display: none;
 	position: absolute;
+	z-index: 999999;
 }
 
 button {
@@ -324,7 +325,121 @@ button {
 	display: none;
 }
 
+#larrow {
+	margin-top: 100px;
+}
 
+#larrowtail {
+	font-size: 15px;
+	background-color: #828282;
+	float: left;
+	width: 600px;
+	height: 25px;
+	color: white;
+	transform: rotate(-90deg);
+	margin-left: -18em;
+	margin-top: 280px;
+	text-align: center;
+	padding-top: 5px;
+	position: absolute;
+}
+
+#larrowhead {
+	width: 0;
+	height: 0;
+	border-style: solid;
+	border-width: 0 25px 30px 25px;
+	border-color: transparent transparent #828282 transparent;
+	margin-left: 6px;
+	padding-top: 15px;
+}
+
+#rarrow {
+	margin-top: -33em;
+}
+
+#rarrowtail {
+	font-size: 15px;
+	background-color: #828282;
+	float: right;
+	width: 600px;
+	height: 25px;
+	color: white;
+	transform: rotate(90deg);
+	text-align: center;
+	margin-top: 2.5em;
+	position: absolute;
+	margin-left: 72.9em;
+	padding-top: 5px;
+}
+
+#rarrowhead {
+	width: 0;
+	height: 0;
+	border-style: solid;
+	border-width: 0 25px 30px 25px;
+	border-color: transparent transparent #828282 transparent;
+	margin-top: 21.3em;
+	margin-right: 0.3em;
+	z-index: 99999;
+	transform: rotate(180deg);
+	float: right;
+}
+
+#barrow1 {
+}
+
+#barrowtail1 {
+	font-size: 15px;
+	background-color: #828282;
+	width: 60em;
+	height: 25px;
+	color: white;
+	text-align: center;
+	padding-top: 5px;
+	position: absolute;
+	margin-top: -2.6em;
+	right: 19.4%;
+}
+
+#barrowhead1 {
+	width: 0;
+	height: 0;
+	border-style: solid;
+	border-width: 0 25px 30px 25px;
+	border-color: transparent transparent #828282 transparent;
+	padding-top: 20px;
+	transform: rotate(90deg);
+	right: 50%;
+	margin-left: 71.9em;
+}
+
+#barrow2 {
+}
+
+#barrowtail2 {
+	font-size: 15px;
+	background-color: #828282;
+	width: 60em;
+	height: 25px;
+	color: white;
+	text-align: center;
+	padding-top: 5px;
+	position: absolute;
+	margin-top: -2.6em;
+	right: 17.6%;
+}
+
+#barrowhead2 {
+	width: 0;
+	height: 0;
+	border-style: solid;
+	border-width: 0 25px 30px 25px;
+	border-color: transparent transparent #828282 transparent;
+	padding-top: 20px;
+	transform: rotate(270deg);
+	margin-left: 14.5em;
+}
 
 
 
