--- a/style.css
+++ b/style.css
@@ -115,8 +115,9 @@ nav a:hover{
 .back {
 	background-color: #F3F1E4;
 	width: 100%
-	margin: -15px;
-	height: 630px;
+	margin-top: -15px;
+	height: 25%;
+	padding: 20px;
 }
 
 .back1 {
@@ -174,7 +175,7 @@ footer {
 	width: 100%;
 	height:100px;
 	background-color: #c5d5c5;
-	margin-top:40em;
+	margin-top:30em;
 	position: absolute;
 	left: 0;
 	right: 0;
