--- a/style.css
+++ b/style.css
@@ -8,6 +8,65 @@ a {
 	text-decoration: none;
 }
 
+nav {
+	position: fixed;
+	float: right;
+	top:0;
+	right: 0;
+	background-color: #c5d5c5;
+	width: 100%;
+	height: 50px;
+	text-align: center;
+	justify-content: center;
+	align-items: center;
+	overflow: auto;
+	padding-left: 15px;
+	padding-right: 15px;
+	z-index: 9999999;
+}
+
+nav a {
+	color: white;
+	font-weight: bold;
+	font-size: 14px;
+	margin: auto;
+	line-height: 50px;
+	padding: 13px;
+	border-radius: 20px;
+	text-shadow:
+    -1px -1px 0 #9fa9a3,
+    1px -1px 0 #9fa9a3,
+    -1px 1px 0 #9fa9a3,
+    1px 1px 0 #9fa9a3;
+}
+
+nav a.active {
+	background-color: #F3F1E4;
+	color: white;
+	text-shadow:
+    -1px -1px 0 #9fa9a3,
+    1px -1px 0 #9fa9a3,
+    -1px 1px 0 #9fa9a3,
+    1px 1px 0 #9fa9a3;  
+}
+
+nav a:hover{
+	background-color: #9fa9a3;
+}
+
+nav input[type=text] {
+	padding: 0.5em;
+	border: none;
+	margin-left: 2em;
+	font-size: 14px;
+	border-radius: 15px;
+	text-indent: 10px;
+}
+
+header {
+	margin-top: -1em;
+}
+
 #logo {
 	width: 130px;
 	float: left;
@@ -58,59 +117,25 @@ a {
 	width: 100px;
 }
 
-#twitter {
-	text-align: right;
+.column {
+	float: left;
+	width: 45%;
+	padding-left: 3em;
 }
 
-nav {
-	position: fixed;
-	float: right;
-	top:0;
-	right: 0;
-	background-color: #c5d5c5;
-	width: 100%;
-	height: 50px;
-	text-align: center;
-	justify-content: center;
+.row:after {
+	content: "";
+	display: table;
+	clear: both;
+}
+
+.row {
 	align-items: center;
-	overflow: auto;
-	padding-left: 15px;
-	padding-right: 15px;
-	z-index: 9999999;
+	margin-left: -15px;
+	margin-right: -15px;
 }
 
-nav a {
-	color: white;
-	font-weight: bold;
-	font-size: 14px;
-	margin: auto;
-	line-height: 50px;
-	padding: 13px;
-	border-radius: 20px;
-	text-shadow:
-    -1px -1px 0 #9fa9a3,
-    1px -1px 0 #9fa9a3,
-    -1px 1px 0 #9fa9a3,
-    1px 1px 0 #9fa9a3;
-}
-
-nav a.active {
-	background-color: #F3F1E4;
-	color: white;
-	text-shadow:
-    -1px -1px 0 #9fa9a3,
-    1px -1px 0 #9fa9a3,
-    -1px 1px 0 #9fa9a3,
-    1px 1px 0 #9fa9a3;  
-}
-
-nav a:hover{
-	background-color: #9fa9a3;
-}
-
-#periodictable {
-	margin-top: 20px;
-}
+/* BACK DIVS: 0(SAND), 1(MINT), 2(WHITE) */
 
 .back {
 	background-color: #F3F1E4;
@@ -134,24 +159,7 @@ nav a:hover{
 	height: 630px;
 }
 
-.column {
-	float: left;
-	width: 45%;
-	padding-left: 3em;
-}
-
-.row:after {
-	content: "";
-	display: table;
-	clear: both;
-}
-
-.row {
-	align-items: center;
-	margin-left: -15px;
-	margin-right: -15px;
-}
-
+/* TEXT ELEMENTS */
 
 h2 {
 	font-size: 30px;
@@ -162,46 +170,19 @@ h2 {
 }
 
 h3 {
-	text-indent: 3em;
+	text-indent: 2em;
 	color: #c5d5c5;
 	text-shadow: 1px 1px 0 #9fa9a3;
 }
 
 p {
-	padding-left: 6em;
+	padding-left: 4em;
 }
 
-footer {
-	width: 100%;
-	height:100px;
-	background-color: #c5d5c5;
-	margin-top:30em;
-	position: absolute;
-	left: 0;
-	right: 0;
-	line-height: 40px;
-	font-size: 20px;
-	color: white;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	text-shadow:
-    -1px -1px 0 #9fa9a3,
-    1px -1px 0 #9fa9a3,
-    -1px 1px 0 #9fa9a3,
-    1px 1px 0 #9fa9a3;  
-}
+/* TABLE ELEMENTS */
 
-#gitlink {
-	color: white;
-	font-weight: bold;
-}
-
-#gitlink:hover {
-	color: #F3F1E4;
-}
-
-img {
-	border-radius: 15px;
+main {
+	margin-top: -5em;
 }
 
 table {
@@ -267,9 +248,11 @@ td {
 .lanthanides {
 	background-color: #BCC8A9;
 }
+
 .actinides {
 	background-color: #E6F1D4;
 }
+
 #lanthanide {
 	margin-top: 9px;
 	position: absolute;
@@ -332,6 +315,8 @@ button {
 	margin-top: 200px;
 	display: none;
 }
+
+/* LEFT ARROW, RIGHT ARROW, BOTTOM ARROWS */
 
 #larrow {
 	margin-top: 100px;
@@ -449,14 +434,31 @@ button {
 	margin-left: 14.5em;
 }
 
-main {
-	margin-top: -5em;
+/* FOOTER*/
+
+#gitlink {
+	color: white;
+	font-weight: bold;
 }
 
+#gitlink:hover {
+	color: gray;
+}
 
-
-
-
+footer {
+	width: 100%;
+	height:100px;
+	background-color: #c5d5c5;
+	margin-top:30em;
+	position: absolute;
+	left: 0;
+	right: 0;
+	line-height: 40px;
+	font-size: 20px;
+	color: white;
+	padding-top: 10px;
+	padding-bottom: 10px; 
+}
 
 
 
