--- a/style.css
+++ b/style.css
@@ -84,6 +84,10 @@ nav input[type=text] {
 	color: gray;
 }
 
+nav select {
+	display: none;
+}
+
 /* HEADER */
 header {
 	margin-top: -1em;
@@ -97,6 +101,15 @@ header {
 	padding-right: 1em;
 	padding-left: 1.5em;
 }
+
+@media only screen 
+  and (min-device-width: 414px) 
+  and (max-device-width: 736px) 
+  and (-webkit-min-device-pixel-ratio: 3) {
+  	#logo {
+  		display: none;
+  	}
+  }
 
 #chemistry {
 	letter-spacing: 10px;
